--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         </div>
     </div>
 
-    <footer class="container-fluid text-center bg-dark text-white">
+    <footer class="container-fluid bg-dark text-white">
         <div class="row">
-            <div class="col-sm-6">
-                <h5>Reach out to us at gnctr2025mtl@gmail.com</h5>
+            <div class="col-sm-6 ps-5">
+                <h5>Reach out to us!</h5>
+                <p>gnctr2025mtl@gmail.com</p>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 pe-5 text-end">
+                <p>Website by <a class="subtle-link" href="https://github.com/IanjhPhillips">Ian Phillips</a></p>
             </div>
         </div>
     </footer>
