--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-sm-6 ps-5">
                 <h5>Reach out to us!</h5>
-                <p>gnctr2025mtl@gmail.com</p>
+                <p class="subtle-link">gnctr2025mtl@gmail.com</p>
             </div>
             <div class="col-sm-6 pe-5 text-end">
                 <p>Website by <a class="subtle-link" href="https://github.com/IanjhPhillips">Ian Phillips</a></p>
