--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>gnctr2025</title>
-    <link href="./css/custom.min.css" rel="stylesheet">
-    <link href="./css/styles.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  </head>
-  <body>
 
-    <!-- Navbar -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>gnctr2025</title>
+  <link href="./css/custom.min.css" rel="stylesheet">
+  <link href="./css/styles.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+</head>
 
-    <!-- Full screen img bg -->
-    <div id="home">
-        <div class="landing-text">
-            <h1>GNCTR 2025</h1>
-            <h3>Launching Soon</h3>
-        </div>
+<body>
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+      <a href="#" class="navbar-brand"><img src="img/logo.png" alt="GNCTR2025" height="100" width="100"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a href="#" class="nav-link">GNCTR</a>
+          </li>
+          <li class="nav-item">
+            <a href="competition.html" class="nav-link">Competition</a>
+          </li>
+          <li class="nav-item">
+            <a href="team.html" class="nav-link">Meet the OC</a>
+          </li>
+          <li class="nav-item">
+            <a href="questions.html" class="nav-link">Questions</a>
+          </li>
+          <li class="nav-item">
+            <a href="sponsors.html" class="nav-link">Sponsors</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <footer class="container-fluid bg-dark text-white">
-        <div class="row">
-            <div class="col-sm-6 ps-5">
-                <h5>Reach out to us!</h5>
-                <p class="subtle-link">gnctr2025mtl@gmail.com</p>
-            </div>
-            <div class="col-sm-6 pe-5 text-end">
-                <p>Website by <a class="subtle-link" href="https://github.com/IanjhPhillips">Ian Phillips</a></p>
-            </div>
-        </div>
-    </footer>
+  <h2>Home</h2>
 
-  </body>
+</body>
+
 </html>
